--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <h4>
-      I CAN HAZ TIME?? <br>
+      No TIME?? <br>
       <span id="clock">Clock goes here</span>
     </h4>
 
