--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
       <h1>LOLCAT CLOCK</h1>
     </header>
-
+	<h5>
+		Hi there
+	</h5>
     <h4>
       I CAN HAZ TIME?? <br>
       <span id="clock">Clock goes here</span>
